--- a/rider/src/components/Account/History/OrderHistoryContainer.module.scss
+++ b/rider/src/components/Account/History/OrderHistoryContainer.module.scss
@@ -4,27 +4,39 @@
 .container {
   min-height: calc(100vh - $FM_HEADER_HEIGHT - $FM_FOOTER_HEIGHT);
   padding: 40px 0;
+
   @include devices(md) {
-    min-height: auto;
-    margin-bottom: -175px + $FM_FOOTER_HEIGHT_MD;
+    min-height: calc(100vh - $FM_HEADER_HEIGHT_MD - $FM_FOOTER_HEIGHT_MD);
+    padding: 15px 0;
+
+    .mobileNav {
+      position: absolute;
+    }
+
+    .navigationContainer {
+      background: 0;
+      border: 0;
+      height: 0;
+      padding: 0;
+    }
   }
-  @media (max-width: 767px) {
-    background-color: #fdf5e7;
+
+  @include devices(xs) {
+    min-height: calc(109vh - $FM_HEADER_HEIGHT_XS - $FM_FOOTER_HEIGHT_XS);
+    padding: 15px 0;
+
+    .mobileNav {
+      position: absolute;
+    }
+
+    .navigationContainer {
+      background: 0;
+      border: 0;
+      height: 0;
+      padding: 0;
+    }
   }
 }
-
-// .navigationContainer,
-// .contentContainer {
-//   background: #f2f2f2;
-//   border: 1px solid #000000;
-//   height: 100%;
-//   padding: 30px 20px;
-// }
-
-// .contentContainer {
-//   background-color: #fdf5e7;
-//   padding: 30px 0;
-// }
 
 .navigationContainer {
   background: #f2f2f2;
@@ -34,23 +46,11 @@
 }
 
 .contentContainer {
-  @media (min-width: 768px) {
-    border: 1px solid #000000;
-    height: 100%;
-    padding: 30px 20px;
-  }
+  height: 100%;
+  padding: 30px 20px;
 }
 
-.contentContainer {
-  background-color: #fdf5e7;
-  padding: 30px 0;
-  @media (max-width: 768px) {
-    height: 800px;
-  }
-}
-
-.bg {
-  @media (max-width: 425px) {
-    background-color: #fdf5e7;
-  }
+.content {
+  height: 100%;
+  padding: 30px 20px;
 }
