--- a/rider/src/components/Account/History/OrderHistoryContent.module.scss
+++ b/rider/src/components/Account/History/OrderHistoryContent.module.scss
@@ -156,3 +156,16 @@
     }
   }
 }
+
+.bottomBtn {
+  display: flex;
+  justify-content: center;
+  gap: 40px;
+
+  button {
+    background-color: #d9d9d9;
+    border: 0.5px solid rgba(97, 72, 28, 0.5);
+    border-radius: 5px;
+    color: black;
+  }
+}
