--- a/customer/src/components/Register/RegisterForm.module.scss
+++ b/customer/src/components/Register/RegisterForm.module.scss
@@ -55,14 +55,14 @@
 
   button {
     background: #e6b325;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: $FM_BUTTON_SHADOW;
     border: none;
     border-radius: 5px;
-    color: #61481c;
-    font-size: 20px;
-    line-height: 1.2;
-    min-width: 240px;
-    padding: 10px;
+    color: $FM_TEXT_BROWN;
+    font-size: 16px;
+    font-weight: 300;
+    width: 180px;
+    padding: 6px;
 
     &:hover {
       background: #a47e3b;
@@ -77,6 +77,20 @@
     @include devices(md) {
       font-size: 18px;
       padding: 6px;
+    }
+  }
+
+  button.pin {
+    background: #000000;
+    border: 2px solid #000000;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 500;
+    margin-top: 5px;
+    text-transform: uppercase;
+
+    &:hover {
+      border-color: $FM_BG_YELLOW;
     }
   }
 
