--- a/customer/src/components/Otp/OtpForm.module.scss
+++ b/customer/src/components/Otp/OtpForm.module.scss
@@ -53,9 +53,12 @@
   font-weight: 300;
   width: 180px;
   padding: 6px;
+  text-decoration: none;
+  transition: $FM_TRANSITION;
 
   &:hover {
     background: #a47e3b;
+    color: #ffffff;
     text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   }
 
