--- a/rider/src/components/Account/History/OrderHistoryContent.module.scss
+++ b/rider/src/components/Account/History/OrderHistoryContent.module.scss
@@ -89,8 +89,8 @@
 
 .orderId {
   background-color: #a47e3b;
-  border: 0.5px solid $FM_TEXT_BROWN;
-  border-radius: 2px;
+  // border: 0.5px solid $FM_TEXT_BROWN;
+  // border-radius: 2px;
 
   h6 {
     color: #ffffff;
@@ -167,5 +167,148 @@
     border: 0.5px solid rgba(97, 72, 28, 0.5);
     border-radius: 5px;
     color: black;
+  }
+}
+
+//
+.orderDeliveryContainer {
+  .tableHeader {
+    th {
+      font-weight: 400;
+      font-size: 17px;
+      line-height: 17px;
+      text-align: center;
+    }
+  }
+  td {
+    text-align: center;
+  }
+  .orderId {
+    background: #a47e3b;
+    border: 0.5px solid #61481c;
+    border-radius: 2px;
+    font-weight: 900;
+    text-align: center;
+    color: #ffffff;
+  }
+  .orderItems {
+    background: #d9d9d9;
+    border: 1px solid #525252;
+    border-radius: 5px;
+    width: 85px;
+    height: 90px;
+    font-weight: 900;
+    font-size: 10px;
+    line-height: 20px;
+    text-align: center;
+    color: black;
+    text-shadow: 0px 1px 1px rgba(0, 0, 0, 0.5);
+    overflow-y: scroll;
+
+    ul:before {
+      content: attr(aria-label);
+      font-size: 10px;
+      font-weight: bold;
+      margin-left: -29px;
+      text-align: center;
+    }
+
+    li {
+      list-style: none;
+      font-weight: 300;
+      font-size: 10px;
+      line-height: 10px;
+      margin-left: -29px;
+    }
+  }
+  .deliveryFee {
+    background: #d9d9d9;
+    border: 1px solid #525252;
+    border-radius: 5px;
+    width: 85px;
+    height: 30px;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 13px;
+    text-align: center;
+
+    span {
+      font-weight: 900;
+      font-size: 12px;
+      line-height: 16px;
+    }
+  }
+  .grandTotal {
+    background: #d9d9d9;
+    border: 1px solid #525252;
+    border-radius: 5px;
+    width: 85px;
+    height: 30px;
+    font-weight: 600;
+    font-size: 10px;
+    line-height: 13px;
+    text-align: center;
+
+    span {
+      font-weight: 900;
+      font-size: 12px;
+      line-height: 16px;
+    }
+  }
+  .customerInfo {
+    background: #fde9b1;
+    border: 1px solid #61481c;
+    border-radius: 0px 5px 5px 5px;
+    width: 262px;
+    height: 185px;
+    padding: 5px;
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+
+    @media (width: 320px) {
+      width: 209px;
+    }
+
+    @media (min-width: 768px) {
+      width: 600px;
+    }
+
+    li {
+      font-weight: 250;
+      font-size: 10px;
+      line-height: 13px;
+      list-style: none;
+
+      span {
+        font-weight: 300;
+        font-size: 10px;
+        line-height: 13px;
+      }
+      img {
+        margin-left: 2px;
+        width: 15%;
+
+        @media (min-width: 768px) {
+          width: 10%;
+        }
+      }
+    }
+    .declineAccept {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      gap: 2px;
+      font-size: 8px;
+      margin-top: 5px;
+
+      a {
+        background: black;
+        padding: 0.1em 1em;
+        border: 0.5px solid #61481c;
+        border-radius: 3px;
+        color: #f0bb62;
+      }
+    }
   }
 }
