--- a/customer/src/components/Account/Profile/ProfileForm.module.scss
+++ b/customer/src/components/Account/Profile/ProfileForm.module.scss
@@ -51,6 +51,18 @@
     }
   }
 
+  .addressInput {
+    width: 100%;
+
+    &:focus {
+      color: #212529;
+      background-color: #fff;
+      border-color: #86b7fe;
+      outline: 0;
+      box-shadow: 0 0 0 0.25rem rgb(13 110 253 / 25%);
+    }
+  }
+
   button:not(.btnChangePass) {
     background: $FM_TEXT_BROWN;
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
