--- a/customer/src/components/Order/OrderContent.module.scss
+++ b/customer/src/components/Order/OrderContent.module.scss
@@ -44,6 +44,34 @@
     margin: 30px 0 0;
   }
 
+  .cancel {
+    background-color: #ffffff;
+    border-color: #000000;
+    border-radius: 5px;
+    box-shadow: $FM_BUTTON_SHADOW;
+    color: #000000;
+    font-weight: 500;
+    margin-top: 10px;
+    min-width: 150px;
+
+    &:hover,
+    &:active,
+    &:focus {
+      background-color: #000000;
+      border-color: #000000;
+      color: #ffffff;
+    }
+
+    @include devices(md) {
+      font-size: 14px;
+      min-width: 120px;
+    }
+
+    @include devices(sm) {
+      width: 40%;
+    }
+  }
+
   @include devices(md) {
     p {
       font-size: 16px;
