--- a/rider/src/components/Account/Order/OrderContent.module.scss
+++ b/rider/src/components/Account/Order/OrderContent.module.scss
@@ -81,6 +81,23 @@
   }
 }
 
+.activateBtn {
+  background: #d9d9d9;
+  border: 0.5px solid rgba(97, 72, 28, 0.5);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 5px;
+  color: black;
+  text-transform: uppercase;
+  margin-top: 10px;
+  font-weight: 400;
+  font-size: 15px;
+  line-height: 15px;
+
+  &:hover {
+    background: #61481c !important;
+  }
+}
+
 .delivered {
   @include devices(sm) {
     margin-top: 30px;
