--- a/customer/src/components/Checkout/DeliveryDetails.module.scss
+++ b/customer/src/components/Checkout/DeliveryDetails.module.scss
@@ -78,6 +78,21 @@
     }
   }
 
+  button.pin {
+    background: #000000;
+    border: 2px solid #000000;
+    color: #ffffff;
+    font-size: 14px;
+    font-weight: 500;
+    margin-top: 5px;
+    padding: 6px 30px;
+    text-transform: uppercase;
+
+    &:hover {
+      border-color: $FM_BG_YELLOW;
+    }
+  }
+
   .checkbox {
     margin-top: 10px;
 
@@ -114,5 +129,20 @@
     font-size: 14px;
     line-height: 1.2;
     margin-bottom: 0;
+  }
+}
+
+.map {
+  width: 100%;
+  height: 70vh;
+}
+
+.modalAddress {
+  background-color: $FM_TEXT_BROWN;
+  color: #ffffff;
+  font-size: 14px;
+
+  strong {
+    font-weight: 500;
   }
 }
