--- a/rider/src/components/Account/History/OrderHistoryContent.module.scss
+++ b/rider/src/components/Account/History/OrderHistoryContent.module.scss
@@ -312,3 +312,107 @@
     }
   }
 }
+
+.historyContainerHistory {
+  .historyHeader {
+    padding: 0px;
+    display: flex;
+    justify-content: space-between;
+
+    @media (max-width: 425px) {
+      padding: 0px;
+    }
+    .historyHeader1 {
+      @media (max-width: 425px) {
+        display: flex;
+        align-items: center;
+        gap: 120px;
+      }
+      @media (width: 320px) {
+        display: flex;
+        align-items: center;
+        gap: 30px;
+      }
+
+      h3 {
+        @media (max-width: 425px) {
+          font-size: 15px;
+          padding-top: 10px;
+        }
+        @media (width: 320px) {
+          font-size: 15px;
+          padding-top: 10px;
+        }
+      }
+
+      .search {
+        input {
+          @media (max-width: 425px) {
+            width: 140px;
+            height: 20px;
+          }
+          @media (width: 375px) {
+            width: 120px;
+            height: 20px;
+          }
+          @media (width: 320px) {
+            width: 140px;
+            height: 20px;
+          }
+        }
+
+        img {
+          @media (max-width: 425px) {
+            width: 20px;
+            height: 20px;
+            top: 5px;
+          }
+          @media (width: 320px) {
+            width: 20px;
+            height: 20px;
+            top: 5px;
+          }
+        }
+      }
+    }
+
+    h3 {
+      margin-left: 0px;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 25px;
+      line-height: 25px;
+    }
+
+    .search {
+      position: relative;
+      margin-left: 0px;
+    }
+
+    .search input {
+      background: #f3f3f3;
+      border: 1px solid #dbdbdb;
+      border-radius: 5px;
+      box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.25);
+      height: 40px;
+      width: 370px;
+      margin: 0;
+      padding: 12px 40px 12px 12px;
+      line-height: 1;
+      outline: none;
+
+      font-style: normal;
+      font-weight: 300;
+      font-size: 12px;
+      line-height: 12px;
+      color: #7d7d7c;
+    }
+
+    .search img {
+      width: 24px;
+      position: absolute;
+      top: 10px;
+      right: 12px;
+    }
+  }
+}
