Customer - Rider Feedback page, integrated api

--- a/customer/src/components/Order/RiderFeedback.module.scss
+++ b/customer/src/components/Order/RiderFeedback.module.scss
@@ -23,6 +23,7 @@
 .riderInfoContainer {
   .riderInfo {
     color: $FM_TEXT_BROWN;
+    text-transform: capitalize;
   }
 
   @include devices(md) {
