--- a/rider/src/components/Account/History/OrderHistoryContent.module.scss
+++ b/rider/src/components/Account/History/OrderHistoryContent.module.scss
@@ -20,6 +20,148 @@
     margin-bottom: 0;
     line-height: 1.2;
   }
+
+  .searchInput {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 39px;
+    input {
+      width: 100%;
+      height: 100%;
+      padding: 0 12px;
+      background: #f3f3f3;
+      border: 1px solid #dbdbdb;
+      box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.25);
+      border-radius: 5px;
+      &::placeholder {
+        font-weight: 300;
+        font-size: 12px;
+        line-height: 12px;
+        color: #7d7d7c;
+      }
+    }
+    .searchIcon {
+      position: absolute;
+      right: 20px;
+      width: 24px;
+      height: 24px;
+    }
+  }
+  .buttonContent {
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    .buttons {
+      width: 138px;
+      height: 31px;
+      background: #d9d9d9;
+      border: 0.5px solid rgba(97, 72, 28, 0.5);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 5px;
+      text-align: center;
+      padding: 0;
+      color: #000;
+      font-weight: 500;
+      font-size: 15px;
+      line-height: 15px;
+      &:hover {
+        background-color: #61481c;
+        color: #ffffff;
+      }
+    }
+  }
+
+  @include devices(md) {
+    margin: 30px 0px 50px;
+  }
+  @include devices(sm) {
+    margin: 10px 0px 50px;
+    .buttons {
+      width: 92px;
+      height: 29px;
+    }
+  }
+}
+
+@include devices(xs) {
+  .mobileHeader {
+    margin-top: 10px;
+    .headerH3 {
+      // background-color: #000;
+      h3 {
+        font-weight: 400;
+        font-size: 15px;
+        line-height: 15px;
+      }
+    }
+    .searchInput {
+      height: 23px !important;
+      width: 148px !important;
+      input {
+        width: 100%;
+        height: 100%;
+      }
+      .searchIcon {
+        height: 15px !important;
+        width: 15px !important;
+      }
+    }
+  }
+}
+
+.modalBody {
+  background: #fdf5e7;
+  .modalHeaderContent {
+    height: 50px;
+    background: #ffffff;
+    border-bottom: 1px solid #000;
+    .modalHeader {
+      font-weight: 500;
+      font-size: 17px;
+      line-height: 17px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      color: #000000;
+      text-align: center;
+      padding: 0;
+    }
+  }
+  .orderDeliveryContainer {
+    height: 34px;
+    margin: 8px 0 14px;
+    .modalRow {
+      border-top: 1px solid #000;
+      border-bottom: 1px solid #000;
+      background: #ffffff;
+      height: 34px;
+      .modalHeader {
+        margin: 0;
+        font-weight: 400;
+        font-size: 17px;
+        line-height: 17px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        color: #000000;
+        text-align: center;
+        padding: 0;
+        &:first-child {
+          background-color: #a47e3b;
+          font-size: 17px;
+          line-height: 23px;
+          display: flex;
+          align-items: center;
+          text-align: center;
+          color: #ffffff;
+          text-shadow: 0px 0px 2px rgba(0, 0, 0, 0.5);
+          border-right: 1px solid #000;
+        }
+      }
+    }
+  }
 }
 
 .innerContainer {
