--- a/customer/src/components/RestaurantFeedback/RestaurantFeedbackContent.module.scss
+++ b/customer/src/components/RestaurantFeedback/RestaurantFeedbackContent.module.scss
@@ -26,6 +26,14 @@
     background-color: #61481c !important;
     border-color: #000000 !important;
   }
+
+  @include devices(sm) {
+    padding: 2px 8px;
+    margin: 0 5px !important;
+    height: 24px;
+    font-size: 12px;
+    line-height: 12px;
+  }
 }
 
 .activeBtn {
@@ -89,5 +97,30 @@
     &:nth-child(even) {
       margin-left: 0%;
     }
+  }
+}
+
+.seeMore {
+  font-weight: 600;
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.modalContainer {
+  padding: 15px;
+  img {
+    border: 1px solid #000000;
+    border-radius: 50px;
+    width: 50px;
+    height: 50px;
+  }
+
+  h4 {
+    font-size: 18px;
+  }
+
+  .rating {
+    line-height: 1;
   }
 }
