--- a/rider/src/components/Account/Profile/ProfileContainer.module.scss
+++ b/rider/src/components/Account/Profile/ProfileContainer.module.scss
@@ -9,6 +9,7 @@
   @include devices(md) {
     min-height: auto;
     margin-bottom: -255px + $FM_FOOTER_HEIGHT_MD;
+    padding-top: 40px;
   }
 }
 
