--- a/rider/src/components/Account/Order/OrderContent.module.scss
+++ b/rider/src/components/Account/Order/OrderContent.module.scss
@@ -245,3 +245,14 @@
     border-radius: 50%;
   }
 }
+
+.chatContainer {
+  // position: absolute;
+  // bottom: 40px;
+  // width: 100%;
+
+  @include devices(sm) {
+    position: initial;
+    margin-top: 40px;
+  }
+}
