Updated Rider and Vendor Offconvas and OrderContent

--- a/rider/src/components/Header/OffcanvasMenu.module.scss
+++ b/rider/src/components/Header/OffcanvasMenu.module.scss
@@ -3,7 +3,7 @@
   border: none !important;
   box-shadow: none;
   width: auto !important;
-  height: auto;
+  height: 44px;
   top: 15px !important;
   right: 15px !important;
 
