--- a/rider/src/components/Account/History/OrderDetailsContent.module.scss
+++ b/rider/src/components/Account/History/OrderDetailsContent.module.scss
@@ -53,10 +53,40 @@
     }
   }
 
+  .feedbackBtn {
+    text-align: center;
+
+    a {
+      background-color: gray;
+      border: 0.5px solid rgba(97, 72, 28, 0.5);
+      border-radius: 5px;
+      color: #ffffff;
+      display: inline-block;
+      font-weight: 500;
+      line-height: 1;
+      text-decoration: none;
+      text-transform: uppercase;
+      min-width: 180px;
+      margin-top: 40px;
+      padding: 15px 10px;
+      transition: $FM_TRANSITION;
+
+      &:hover {
+        opacity: 0.7;
+      }
+    }
+  }
+
   @include devices(md) {
     .btnBack {
       a {
         min-width: 150px;
+        padding: 10px 5px;
+      }
+    }
+    .feedbackBtn {
+      a {
+        min-width: 190px;
         padding: 10px 5px;
       }
     }
