--- a/rider/src/components/Account/History/OrderHistoryContent.module.scss
+++ b/rider/src/components/Account/History/OrderHistoryContent.module.scss
@@ -558,3 +558,87 @@
     }
   }
 }
+
+.innerContainer2 {
+  margin: 30px 0 0;
+
+  .item:not(:last-child) {
+    margin-bottom: 60px;
+  }
+
+  button.btnLoadMore {
+    background-color: $FM_BG_GRAY;
+    border: 0.5px solid #000000;
+    border-radius: 5px;
+    color: #000000;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1;
+    text-transform: uppercase;
+    padding: 10px 20px;
+
+    &:hover {
+      border-color: rgba(97, 72, 28, 0.5);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
+
+    @include devices(md) {
+      font-weight: 400;
+      margin: 10px 0;
+      padding: 8px 16px;
+    }
+  }
+
+  .btnBack {
+    background-color: $FM_BG_GRAY;
+    border: 0.5px solid rgba(97, 72, 28, 0.5);
+    border-radius: 5px;
+    box-shadow: $FM_BUTTON_SHADOW;
+    color: #000000;
+    display: inline-block;
+    font-weight: 500;
+    line-height: 1;
+    text-align: center;
+    text-decoration: none;
+    min-width: 150px;
+    padding: 8px;
+  }
+
+  .btnView {
+    text-align: center;
+
+    a {
+      background-color: $FM_BG_YELLOW;
+      border: 0.5px solid $FM_TEXT_BROWN;
+      border-radius: 3px;
+      color: #ffffff;
+      display: inline-block;
+      font-size: 10px;
+      font-weight: 500;
+      height: 30px;
+      line-height: 30px;
+      padding: 0;
+      text-decoration: none;
+      text-shadow: $FM_TEXT_SHADOW;
+      text-transform: uppercase;
+      width: 100px;
+      transition: $FM_TRANSITION;
+
+      &:hover {
+        opacity: 0.75;
+      }
+    }
+  }
+
+  @include devices(md) {
+    .item:not(:last-child) {
+      margin-bottom: 40px;
+    }
+  }
+
+  @include devices(sm) {
+    .item:not(:last-child) {
+      margin-bottom: 25px;
+    }
+  }
+}
