--- a/rider/src/components/Account/NewOrder/NewOrderContent.module.scss
+++ b/rider/src/components/Account/NewOrder/NewOrderContent.module.scss
@@ -162,8 +162,10 @@
         margin: 5px 0;
       }
       .grandTotalContainer {
+        background: white;
         border: 1px solid #61481c;
         border-radius: 5px;
+        margin-top: 5px;
         height: 77px;
         width: 144px;
         display: flex;
