--- a/rider/src/components/Account/History/OrderHistoryContent.module.scss
+++ b/rider/src/components/Account/History/OrderHistoryContent.module.scss
@@ -309,6 +309,12 @@
     border: 0.5px solid rgba(97, 72, 28, 0.5);
     border-radius: 5px;
     color: black;
+
+    &:hover {
+      border-color: rgba(97, 72, 28, 0.5);
+      background-color: #a47e3b;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+    }
   }
 }
 
