Updated ForgotPassword First Page for rider, added loading

--- a/rider/src/components/Home/ForgotPassword.module.scss
+++ b/rider/src/components/Home/ForgotPassword.module.scss
@@ -41,3 +41,12 @@
     padding: 12px;
   }
 }
+
+// .spinnerBtn {
+//   background-color: $FM_TEXT_BROWN;
+//   border: none;
+//   font-weight: 600;
+//   line-height: 1;
+//   text-transform: uppercase;
+//   padding: 12px;
+// }
