Added Error Handling for ForgotPassword Part 2

--- a/rider/src/components/Home/ForgotPassword.module.scss
+++ b/rider/src/components/Home/ForgotPassword.module.scss
@@ -50,3 +50,14 @@
 //   text-transform: uppercase;
 //   padding: 12px;
 // }
+
+.errors {
+  color: red;
+  text-align: left;
+
+  p {
+    font-size: 14px;
+    line-height: 1.2;
+    margin-bottom: 0;
+  }
+}
