--- a/customer/src/components/Restaurant/MenuSlider.module.scss
+++ b/customer/src/components/Restaurant/MenuSlider.module.scss
@@ -135,51 +135,69 @@
 
 .modal {
   padding-right: 0 !important;
+
+  > div > div {
+    border: none;
+  }
+
+  .modalBody {
+    background-color: #bf9742;
+    padding: 20px 30px;
+  }
 }
 
 .modalContent {
-  span {
-    color: $FM_TEXT_BROWN;
-    font-size: 12px;
+  h6 {
+    color: #ffffff;
+    font-size: 24px;
+    font-weight: 400;
+    text-shadow: $FM_TEXT_SHADOW;
 
-    &.required {
-      background-color: $FM_TEXT_BROWN;
-      border-radius: 5px;
-      color: #ffffff;
-      font-weight: 400;
-      padding: 5px 10px;
+    @include devices(md) {
+      font-size: 20px;
     }
   }
 
   .flavors {
-    padding-top: 5px;
-    padding-left: 10px;
+    background: #ffffff;
+    border: 1px solid #000000;
+    border-radius: 10px;
+    margin: 10px 0 20px;
+    padding: 15px 25px;
 
     li {
       list-style-type: none;
 
       &:not(:last-child) {
-        margin-bottom: 5px;
+        margin-bottom: 15px;
       }
     }
 
     .check {
       input {
-        &:checked {
-          background-color: #464646;
-          border: none;
-        }
+        background: #c4c4c4;
+        border: 2px solid #c4c4c4;
+        outline: 1px solid c4c4c4;
 
+        &:checked,
         &:focus {
-          border-color: #464646;
+          background: #a47e3b;
+          border: 2px solid #ffffff;
           box-shadow: inset 1px 1px 2px rgba(0, 0, 0, 0.1);
+          outline: 1px solid black;
         }
+      }
+
+      label {
+        display: flex;
+        justify-content: space-between;
+        margin-left: 5px;
       }
     }
   }
 
   button {
-    background-color: $FM_BG_GRAY !important;
+    background-color: #f9f9f9 !important;
     border: 0.5px solid #000000;
     border-radius: 5px;
     color: #000000 !important;
@@ -190,8 +208,10 @@
     padding: 10px 20px;
 
     &:hover {
-      border-color: rgba(97, 72, 28, 0.5);
-      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      background-color: $FM_TEXT_BROWN !important;
+      border-color: $FM_TEXT_BROWN;
+      color: #ffffff !important;
+      box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.25);
     }
   }
 }
