--- a/customer/src/components/Checkout/CartSlider.module.scss
+++ b/customer/src/components/Checkout/CartSlider.module.scss
@@ -73,9 +73,20 @@
   }
 }
 
-.flavor {
-  font-size: 14px;
-  text-align: center;
+.cartLabel {
+  p {
+    font-size: 12px;
+    text-align: center;
+    line-height: 1.2;
+    margin: 0;
+
+    /* Line clamp style for 2 lines */
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
 }
 
 @include devices(md) {
