Customer - Restaurant page, updated delete modal popup (2)

--- a/customer/src/components/Restaurant/CartSlider.module.scss
+++ b/customer/src/components/Restaurant/CartSlider.module.scss
@@ -101,6 +101,10 @@
 .lottie {
   svg {
     width: 400px !important;
+
+    @include devices(md) {
+      width: 250px !important;
+    }
   }
 }
 
