Fixed bug on Activate button for web on Tracker page

--- a/rider/src/components/Account/Order/OrderContent.module.scss
+++ b/rider/src/components/Account/Order/OrderContent.module.scss
@@ -263,8 +263,9 @@
 
 .chatContainer {
   position: absolute;
-  bottom: 40px;
+  margin-top: 20px;
   width: 100%;
+ 
 
   @include devices(sm) {
     position: initial;
